--- a/Covid/app/build.gradle
+++ b/Covid/app/build.gradle
@@ -35,4 +35,8 @@ dependencies {
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+
+    implementation 'com.andrognito.patternlockview:patternlockview:1.0.0'
+    implementation 'io.paperdb:paperdb:2.0'
+    implementation 'com.andrognito.patternlockview:patternlockview-reactive:1.0.0'
 }
