--- a/Covid/.gitignore
+++ b/Covid/.gitignore
@@ -13,3 +13,25 @@
 .externalNativeBuild
 .cxx
 local.properties
+
+
+
+
+# built application files
+*.apk
+*.ap_
+
+# Java class files
+*.class
+
+
+
+# generated files
+bin/
+gen/
+
+# Intellij IDEA (see https://intellij-support.jetbrains.com/entries/23393067)
+
+.idea/tasks.xml
+.idea/datasources.xml
+.idea/dataSources.ids
