--- a/Covid/app/src/main/AndroidManifest.xml
+++ b/Covid/app/src/main/AndroidManifest.xml
@@ -17,22 +17,25 @@
         android:usesCleartextTraffic="true">
         <activity
             android:name=".views.ConfirmarPatronView"
-            android:exported="true" />
+            android:exported="true"
+            />
         <activity
             android:name=".views.PatronDesbloqueoView"
             android:exported="true">
-        <intent-filter>
-            <action android:name="android.intent.action.MAIN" />
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
 
-            <category android:name="android.intent.category.LAUNCHER" />
-        </intent-filter>
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
         </activity>
-
-
         <activity
             android:name=".UserRegister"
             android:exported="true">
+        </activity>
 
+        <activity
+            android:name=".views.UserLogin"
+            android:exported="true">
         </activity>
 
         <service
