--- a/Covid/app/src/main/AndroidManifest.xml
+++ b/Covid/app/src/main/AndroidManifest.xml
@@ -6,9 +6,7 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
-
     <application
-
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -17,6 +15,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Covid"
         android:usesCleartextTraffic="true">
+        <activity
+            android:name=".views.ListaLogsView"
+            android:exported="true" />
         <activity
             android:name=".views.ReservasView1"
             android:exported="true" />
