Paso a PROD y Test

--- a/Covid/app/src/main/AndroidManifest.xml
+++ b/Covid/app/src/main/AndroidManifest.xml
@@ -52,7 +52,7 @@
         <service
             android:name=".ServiceHTTP_POST"
             android:enabled="true"
-            android:label="ServicesHttp GET" />
+            android:label="ServicesHttp POST" />
     </application>
 
 </manifest>
